<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="234dp"
        android:layout_height="240dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avatar"
        tools:ignore="ContentDescription" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emaillogintext"
        android:layout_width="350dp"
        android:layout_height="57dp"
        android:layout_marginTop="10dp"
        android:hint="@string/emaill"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="#616161"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="350dp"
        android:layout_height="57dp"
        android:layout_marginTop="32dp"
        android:hint="@string/passwordl"
        android:visibility="visible"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emaillogintext"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginpasstxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="#616161"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgotpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:focusable="true"
                android:minHeight="48dp"
                android:text="@string/forgot_password"
                android:textColor="#2E7D32"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.93"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginbtn"
        android:layout_width="170dp"
        android:layout_height="51dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btnbg"
        android:text="@string/loginl"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="#040404"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="10sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="sans-serif"
                    android:text="@string/register"
                    android:textColor="#43A047"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>

