<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".LeaveRequestfrg" >

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            tools:ignore="RtlSymmetry">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="10sp"
                tools:ignore="TextSizeCheck">


                <LinearLayout
                    android:layout_width="384dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="110sp"
                            android:layout_height="wrap_content"

                            android:padding="10sp"
                            android:text="@string/total_users"
                            android:textColor="@color/white"
                            android:textSize="15sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="15sp"
                            android:layout_height="wrap_content"

                            android:layout_weight="1"
                            android:text="@string/dot"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/totalusercountid"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="@color/white"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="110sp"
                            android:layout_height="wrap_content"

                            android:padding="10sp"
                            android:text="@string/employees"
                            android:textColor="@color/white"
                            android:textSize="15sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView" />

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="15sp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/dot"
                            android:textColor="@color/white"

                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/employeecountid"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="@color/white"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="110sp"
                            android:layout_height="wrap_content"
                            android:padding="10sp"
                            android:text="@string/total_leads"
                            android:textColor="@color/white"
                            android:textSize="15sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView5" />

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="15sp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/dot"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/leadcountid"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="@color/white"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="110sp"
                            android:layout_height="wrap_content"
                            android:padding="10sp"
                            android:text="@string/managers"
                            android:textColor="@color/white"

                            android:textSize="15sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView6" />

                        <TextView
                            android:id="@+id/textView12"
                            android:layout_width="15sp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/dot"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/managercountid"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="@color/white"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView14"
                            android:layout_width="110sp"
                            android:layout_height="wrap_content"
                            android:padding="10sp"
                            android:text="@string/admin"
                            android:textColor="@color/white"
                            android:textSize="15sp"
                            app:layout_constraintStart_toStartOf="parent" />

                        <TextView
                            android:id="@+id/textView13"
                            android:layout_width="15sp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/dot"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/admincountid"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="@color/white"
                            android:textSize="15sp" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
    <ImageButton
        android:id="@+id/openbottomsheet"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:background="@drawable/rounded"
        android:gravity="center|top"
        android:scaleType="centerCrop"
        android:src="@drawable/remove"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.995"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>