<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".UserManagement">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="81dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        android:paddingStart="5sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry">

        <androidx.cardview.widget.CardView
            android:id="@+id/addEmpCard"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="#FFFCEC"
            app:cardCornerRadius="10sp"
            tools:ignore="DuplicateSpeakableTextCheck">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/addEmpImg"
                    android:layout_width="56dp"
                    android:layout_height="53dp"
                    android:layout_marginEnd="1dp"
                    android:contentDescription="@string/add_employee"
                    android:src="@drawable/baseline_person_add_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck,ImageContrastCheck" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:padding="5sp"
                    android:text="@string/add_employee"
                    android:textColor="#000000"
                    android:textSize="10sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/addEmpImg"
                    tools:ignore="SmallSp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <Space
            android:layout_width="60sp"
            android:layout_height="match_parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/viewEmpCard"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="#FFFCEC"
            app:cardCornerRadius="10sp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/viewEmpImg"
                    android:layout_width="56dp"
                    android:layout_height="53dp"
                    android:layout_marginEnd="1dp"
                    android:contentDescription="@string/add_employee"
                    android:src="@drawable/viewemp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

                <TextView
                    android:id="@+id/textViewemp"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:padding="5sp"
                    android:text="@string/view_employee"
                    android:textColor="#000000"
                    android:textSize="10sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/viewEmpImg"
                    tools:ignore="SmallSp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


        <Space
            android:layout_width="60sp"
            android:layout_height="match_parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/harchycard"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="#FFFCEC"
            app:cardCornerRadius="10sp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/harchyimg"
                    android:layout_width="56dp"
                    android:layout_height="53dp"
                    android:layout_marginEnd="1dp"
                    android:contentDescription="@string/add_employee"
                    android:src="@drawable/baseline_dynamic_feed_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck,ImageContrastCheck" />

                <TextView
                    android:id="@+id/harchytext"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:padding="5sp"
                    android:text="@string/make_harchy"
                    android:textColor="#000000"
                    android:textSize="10sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/harchyimg"
                    tools:ignore="SmallSp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
